tests/transpiler/x/swift/values_builtin.error
exit status 1
/tmp/TestSwiftTranspiler_VMValid_Golden2846850477/081/main.swift:4:7: error: cannot find 'values' in scope
2 | import Foundation
3 | let m = ["a": 1, "b": 2, "c": 3]
4 | print(values(m))
  |       `- error: cannot find 'values' in scope
5 | 
