tests/transpiler/x/swift/values_builtin.swift
// Generated by Mochi transpiler v0.10.33 on 2025-07-21 18:53:00 GMT+7
import Foundation
let m = ["a": 1, "b": 2, "c": 3]
print(values(m))
